// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select (isCI = false) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > can cancel 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  opt0
│",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > down arrow selects next option 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ○ opt0
│  ● opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt1",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders option hints 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0 (Hint 0)
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders option labels 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Option 0
│  ○ Option 1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Option 0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > renders options and message 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = false) > up arrow selects previous option 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ○ opt0
│  ● opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > can cancel 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  foo
│  opt0
│",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > down arrow selects next option 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ○ opt0
│  ● opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt1",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders option hints 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0 (Hint 0)
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders option labels 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● Option 0
│  ○ Option 1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  Option 0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > renders options and message 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;

exports[`select (isCI = true) > up arrow selects previous option 1`] = `
[
  "<cursor.hide>",
  "│
◆  foo
│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ○ opt0
│  ● opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.down>",
  "│  ● opt0
│  ○ opt1
└
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  foo
│  opt0",
  "
",
  "<cursor.show>",
]
`;
